# avaluev.github.io

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_PAGES_SETUP_GUIDE.md  GITHUB_PROFILE_OPTIMIZATION.md  Makefile  README.md  REPOSITORY_CLEANUP_GUIDE.md  SECURITY.md  about.html  coaching.html  contact.html  feed.xml  humans.txt  index.html  llms-full.txt  llms.txt  manifest.webmanifest  package-lock.json  package.json  projects.html  pyproject.toml  robots.txt  sitemap.xml  topnav.css
.claude/agents/: data-analyst.md  desktop-automation.md  development-assistant.md  documentation-writer.md  file-system-expert.md  performance-optimizer.md
.github/workflows/: quality-gates.yml
.well-known/: security.txt
audit-team/: index.html
autonomous-ai-team/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  main.py  requirements.txt
autonomous-ai-team/config/: agents.json  tools.json
autonomous-ai-team/docker/: Dockerfile  docker-compose.yml
autonomous-ai-team/docs/: IMPLEMENTATION_STATUS.md  MACOS_SETUP.md  TOOLS_AND_TECHNIQUES.md
autonomous-ai-team/scripts/: example_usage.py  setup.sh
decrees/kg/: index.html
donors/: index.html
honesty/: index.html
initiatives/: index.html
institutions/: index.html
kyrgyzstan/: index.html
lenses/: index.html
methodology/: index.html
mvp/: index.html
people/: index.html
procurement/: index.html
provenance/: index.html
scoring/: index.html
scripts/: audit_links.py  build_b2g_redirects.py  build_og_image.py  build_seo_assets.py  check_quality.py
trends/: index.html
uzbekistan/: index.html
(+39 files in other folders)
