[project]
name = "avaluev-portfolio"
version = "1.0.0"
description = "Personal portfolio + research site for Alex Valuev (avaluev.github.io)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Alex Valuev", email = "valuev.alexandr@gmail.com" },
]
keywords = ["portfolio", "product-management", "career-coaching", "ai"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
# Build scripts use stdlib only. No runtime third-party deps.
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://avaluev.github.io/"
Repository = "https://github.com/avaluev/avaluev.github.io"
LinkedIn = "https://www.linkedin.com/in/valuev/"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "RUF",
]
ignore = [
  "E501",
  "SIM117",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
files = ["scripts"]
